tests/paczka1/small_fuzzy/37798948.err
Error in line 10: bkXtq A756 26,7
Error in line 11: bkXtq S825 6,0
